# NumericalMethods

./: .gitignore  README.md
CollocationAndLeastSquaresMethod/: CMakeLists.txt  CMakeUserPresets.json  CollocationLeastSquaresMethod.cpp  CollocationLeastSquaresMethod.h  main.cpp
FiniteElementMethod/: CMakeLists.txt  FiniteElementMethod.cpp  FiniteElementMethod.h  approx_sol_2.txt  main.cpp  result.txt  task.cpp
FredholmEquation/: main.ipynb  Интегральное уравнение первого рода типа Фредгольма.docx
decompositionSVD/: data_3.txt  data_5.txt  decompositionSVD.cpp  decompositionSVD.h  main.cpp  result.txt
